terraform/vpc.tf
resource "aws_vpc" "imba-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "DE-ers-imba-vpc"
  }
}
